--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "mongoose": "^8.0.3",
     "prettier": "^3.1.1"
   }
 }
